# MythCore

./: README.md
MythCore/: MythCore.sln
MythCore/CrashResave/: CMakeLists.txt  CrashResave.vcxproj  main.cpp
MythCore/CrashSave/: CMakeLists.txt  CrashSave.vcxproj  main.cpp
MythCore/Debug/: lua53.lib
MythCore/GameClient/: GameClient.vcxproj  GameClient.vcxproj.filters  gameclient.cpp  gameclient.h  main.cpp
MythCore/GameClientDlg/: GameClientDlg.aps  GameClientDlg.cpp  GameClientDlg.h  GameClientDlg.rc  GameClientDlg.vcxproj  GameClientDlg.vcxproj.filters  GameClientDlgDlg.cpp  GameClientDlgDlg.h  ReadMe.txt  gameclient.cpp  gameclient.h  resource.h  stdafx.cpp  stdafx.h
MythCore/GameServer/: CMakeLists.txt  DefaultValue.xml  FileList.xml  GameServer.vcxproj  GameServer.vcxproj.filters  dbjob.cpp  dbjob.h  dbmanager.cpp  dbmanager.h  gameserver.cpp  gameserver.h  gameserverconfig.cpp  gameserverconfig.h  internalmsg.cpp  internalmsg.h  internalmsgpool.cpp  internalmsgpool.h  locallogjob.cpp  locallogjob.h  loginjob.cpp  loginjob.h  loginmodule.cpp  loginmodule.h  main.cpp  messagefactory.cpp  obj.h  objmanager.h  objpool.cpp  objpool.h  scenejob.cpp  scenejob.h  taskmanager.h
MythCore/GameServer/config/: gameserverconfig.xml
MythCore/GameServer/dbscript/: dbprocedure.sql  dbtable.sql
MythCore/GameServer/inc/: GameLogicConfig.h  ServerActLuaReg.h  TemplateCoder.bat  aistate.h  aistrategy.h  chatmodule.h  clientsocketjob.h  curlhandle.h  dailyactivity.h  dailyactivitytype.h  dailyactmodule.h  dbjob.h  dbmessage.h  dbmodule.h  dirtyword.h  entity.h  entitycreator.h  entityplayer.h  entitytimer.h  entitytype.h  equip.h  errcode.h  friendmodule.h  gameserver.h  gameserverconfig.h  gameservernet.h  geometrytype.h  globalluareg.h  gmcommandmanager.h  gmlog.h  guildmodule.h  instance.h  instancemodule.h  instancetype.h  interactiveunit.h  internalmsg.h  internalmsgpool.h  itemcontainer.h  itemlist.h  itemluareg.h  (+74 more)
MythCore/GameServer/src/: CMakeLists.txt  GameLogicConfig.cpp  ServerActLuaReg.cpp  aistate.cpp  aistrategy.cpp  chatmodule.cpp  clientsocketjob.cpp  curlhandle.cpp  dailyactivity.cpp  dailyactmodule.cpp  dbjob.cpp  dbmodule.cpp  dirtyword.cpp  entity.cpp  entityplayer.cpp  entitytimer.cpp  equip.cpp  friendmodule.cpp  gameserver.cpp  gameserverconfig.cpp  gameservernet.cpp  globalluareg.cpp  gmcommandmanager.cpp  gtest.cpp  guildmodule.cpp  instance.cpp  instancemodule.cpp  interactiveunit.cpp  internalmsgpool.cpp  itemcontainer.cpp  itemluareg.cpp  itemmodule.cpp  itemmoduletest.cpp  itemobject.cpp  itemunit.cpp  jobmanager.cpp  locallogjob.cpp  loginjob.cpp  loginmodule.cpp  loginplayer.cpp  (+43 more)
MythCore/GameServer/tinyxml/: tinyxml2.cpp
MythCore/GoldenFlower/: GoldenFlower.vcxproj  GoldenFlower.vcxproj.filters  makefile  module.mk
MythCore/MythCore/: CMakeLists.txt  MythCore.vcxproj  MythCore.vcxproj.filters  makefile  module.mk  tags.sh
MythCore/MythCore/include/: array.h  bit_set.h  bit_set.inl  blockmemory.h  bytestream.h  commontype.h  crc32.h  deque.h  epollmodel.h  fileutility.h  fixblockmemory.h  hashmap.h  i18n.h  indexarray.h  iterator.h  linuxthread.h  list.h  log.h  logdisplayer.h  logmanager.h  macrodefine.h  memory.h  mysqldatabase.h  mysqlfield.h  mysqlqueryresult.h  mysqlrow.h  mythlist.h  performance.h  pthread.h  selectclient.h  selectmodel.h  selectserver.h  shareblockmemory.h  sharememory.h  simplelock.h  singleton.h  slist.h  socket.h  socketstream.h  tcpsocket.h  (+8 more)
MythCore/MythCore/src/: CMakeLists.txt  bytestream.cpp  crc32.cpp  epollmodel.cpp  fileutility.cpp  i18n.cpp  linuxthread.cpp  log.cpp  logdisplayer.cpp  logmanager.cpp  main.cpp  mysqldatabase.cpp  mysqlfield.cpp  mysqlqueryresult.cpp  performance.cpp  pthread.cpp  selectclient.cpp  selectmodel.cpp  selectserver.cpp  sharememory.cpp  socket.cpp  socketstream.cpp  tcpsocket.cpp  threadpool.cpp  timemanager.cpp  timeutility.cpp  winthread.cpp  workthread.cpp
MythCore/MythCoreTest/: MythCoreTest.vcxproj  MythCoreTest.vcxproj.filters  gameserver.cpp  gameserver.h  makefile
MythCore/MythCoreTestSocketClient/: MythCoreTestSocketClient.vcxproj
MythCore/MythCoreTestSocketServer/: MythCoreTestSocketServer.vcxproj
MythCore/ServerCrashResave/: CMakeLists.txt  ServerCrashResave.vcxproj  ServerCrashResave.vcxproj.filters  ServerResave.cpp  ServerResave.h  main.cpp
MythCore/ServerManager/: ServerManager.vcxproj
MythCore/TcpServer/: CMakeLists.txt  TcpServer.vcxproj  TcpServer.vcxproj.filters  main.cpp  makefile  tcpserver.cpp  tcpserver.h
MythCore/message/: CMakeLists.txt  chatmodule.hxx  chatmodule.hxx.pb.cc  chatmodule.hxx.pb.h  common.hxx  common.hxx.pb.cc  common.hxx.pb.h  dailyactmodule.hxx  dailyactmodule.hxx.pb.cc  dailyactmodule.hxx.pb.h  dbmodule.hxx  dbmodule.hxx.pb.cc  dbmodule.hxx.pb.h  itemmodule.hxx  itemmodule.hxx.pb.cc  itemmodule.hxx.pb.h  loginmessage.hxx  loginmessage.hxx.pb.cc  loginmessage.hxx.pb.h  loginmessage.pb.cc  loginmessage.pb.h  loginmessage.proto  mapmodule.hxx  mapmodule.hxx.pb.cc  mapmodule.hxx.pb.h  message.bat  message.hxx  message.hxx.pb.cc  message.hxx.pb.h  message.pb.cc  message.pb.h  message.proto  propertymodule.hxx  propertymodule.hxx.pb.cc  propertymodule.hxx.pb.h  rankmodule.hxx  rankmodule.hxx.pb.cc  rankmodule.hxx.pb.h  serveractmodule.hxx  serveractmodule.hxx.pb.cc  (+10 more)
back/lua编译脚本/: luacompile.bat
(+435 files in other folders)
